<resources>
    <string name="app_name">LearningForums</string>
    <string name="main_title">LearningForums</string>
    <string name="menu_home">主页</string>
    <string name="menu_navigation">导航</string>
    <string name="menu_system">体系</string>
    <string name="menu_collect">收藏</string>
    <string name="menu_chat">公众号</string>
    <string name="menu_classification">项目分类</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">这是home的fragment</string>
    <string name="tab_home">首页</string>
    <string name="tab_project">项目</string>
    <string name="tab_square">广场</string>
    <string name="tab_question">问答</string>

    <string name="network_failed">网络加载失败</string>

    <string name="author">作者：%s</string>
    <string name="classify">分类：%s</string>
    <string name="menu_setting">设置</string>
    <string name="menu_my">我的</string>
    <string name="menu_settings">设置</string>
    <string name="title">账号:</string>
    <string name="Register">注册</string>
    <string name="Ranks">积分排行榜</string>
</resources>
