<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:id="@+id/group_menu1" android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/menu_home"/>
        <item
            android:id="@+id/nav_navigation"
            android:icon="@drawable/ic_navigation_black_24dp"
            android:title="@string/menu_navigation" />
        <item
            android:id="@+id/nav_system"
            android:icon="@drawable/ic_system_black_24dp"
            android:title="@string/menu_system"/>
    </group>

    <group android:id="@+id/group_menu2" android:checkableBehavior="single">
        <item
            android:id="@+id/nav_login"
            android:icon="@drawable/ic_person_black_24dp"
            android:title="@string/menu_my" />
        <item
            android:id="@+id/nav_collect"
            android:icon="@drawable/ic_collect_black_24dp"
            android:title="@string/menu_collect" />
    </group>

</menu>