<?xml version="1.0" encoding="utf-8"?>
<navigation
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/navigation"
    app:startDestination="@id/nav_home"
    tools:ignore="UnusedNavigation">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.xiayang.learningforums.nav_ui.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home"/>
    <fragment
        android:id="@+id/nav_navigation"
        android:name="com.xiayang.learningforums.nav_ui.NavigationFragment"
        android:label="@string/menu_navigation"
        tools:layout="@layout/fragment_navigation"/>
    <fragment
        android:id="@+id/nav_system"
        android:name="com.xiayang.learningforums.nav_ui.SystemFragment"
        android:label="@string/menu_system"
        tools:layout="@layout/fragment_system"/>
    <fragment
        android:id="@+id/nav_collect"
        android:name="com.xiayang.learningforums.nav_ui.CollectFragment"
        android:label="@string/menu_collect"
        tools:layout="@layout/fragment_collect"/>
    <fragment
        android:id="@+id/nav_chat"
        android:name="com.xiayang.learningforums.nav_ui.ChatFragment"
        android:label="@string/menu_collect"
        tools:layout="@layout/fragment_chat"/>
    <fragment
        android:id="@+id/nav_classification"
        android:name="com.xiayang.learningforums.nav_ui.ClassificationFragment"
        android:label="@string/menu_classification"
        tools:layout="@layout/fragment_classification"/>
</navigation>